--- a/.gitignore
+++ b/.gitignore
@@ -239,6 +239,9 @@ ClientBin/
 *.pfx
 *.publishsettings
 orleans.codegen.cs
+.2023-23.11-homework-6\Homework6.vcxproj
+.2023-23.11-homework-6\Homework6.vcxproj.filters
+.2023-23.11-homework-6\Homework6.vcxproj.user
 
 # Including strong name files can present a security risk
 # (https://github.com/github/gitignore/pull/2483#issue-259490424)
