--- a/2023-23.09-homework-2/Task8/Task8.vcxproj
+++ b/2023-23.09-homework-2/Task8/Task8.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{62b63ded-5ce6-4152-afb6-2ce3d9a15da4}</ProjectGuid>
+    <ProjectGuid>{b8f05b5d-8923-49ce-96bd-4135e0564dbd}</ProjectGuid>
     <RootNamespace>Task8</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source1.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
