--- a/2023-23.09-homework-2/Task5/Task5.vcxproj
+++ b/2023-23.09-homework-2/Task5/Task5.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{121ac8c1-171e-41dd-bf49-8b6017a28d18}</ProjectGuid>
+    <ProjectGuid>{185c6a57-474f-44c5-8415-418b5fa4bbc2}</ProjectGuid>
     <RootNamespace>Task5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source1.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
