--- a/2023-01.10-homework-3/Task4/Task4.vcxproj
+++ b/2023-01.10-homework-3/Task4/Task4.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{139230a1-1fc8-4eb3-b751-4013decad900}</ProjectGuid>
+    <ProjectGuid>{5dd590ee-0a61-476b-8d4e-a47eb4052aea}</ProjectGuid>
     <RootNamespace>Task4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source1.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
