--- a/2023-01.10-homework-3/Task6/Task6.vcxproj
+++ b/2023-01.10-homework-3/Task6/Task6.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{45b527b0-68b6-4c61-9f7f-9b22a8ba504f}</ProjectGuid>
+    <ProjectGuid>{642cf3ce-f22c-4832-af76-cf5306e5a25e}</ProjectGuid>
     <RootNamespace>Task6</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source1.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
