--- a/2023-01.10-homework-3/Task8/Task8.vcxproj
+++ b/2023-01.10-homework-3/Task8/Task8.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{722c0e7a-7761-472b-99f1-5d308b8eb0e4}</ProjectGuid>
+    <ProjectGuid>{ff74612b-9c99-45f7-8e0e-9ad3b190920c}</ProjectGuid>
     <RootNamespace>Task8</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source1.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
