--- a/2023-01.10-homework-3/Task9/Task9.vcxproj
+++ b/2023-01.10-homework-3/Task9/Task9.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ad6e3716-3fd4-460f-a192-aa9fa98d19af}</ProjectGuid>
+    <ProjectGuid>{2226857b-403c-4a1f-9137-849cac54ea8c}</ProjectGuid>
     <RootNamespace>Task9</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source1.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
