--- a/Test-19.04.2024/Task1/Task1.vcxproj
+++ b/Test-19.04.2024/Task1/Task1.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f12216f3-a30f-4a66-b8ec-1753bd9fc071}</ProjectGuid>
-    <RootNamespace>Tasknodes</RootNamespace>
+    <ProjectGuid>{e9e896c3-feea-492e-8879-04b10e118457}</ProjectGuid>
+    <RootNamespace>Task1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
